Fixed a small isue on mobile

--- a/index.css
+++ b/index.css
@@ -301,7 +301,7 @@ section{
     .ProjectText{
         font-weight: 400;
         margin: 10px;
-        font-size: 1.1rem;
+        font-size: 0.95rem;
     }
     .ProjectImg{
         margin: 10px;
